# Lexicim

./: ChangeLog  Lexicim.sln  Makefile.am  README  README.md  autogen.sh  configure.ac
Lexicim/: Lexicim.mdproj  Makefile.am  immodule.vala  lexicim.vala
