AC_INIT([lexicim], [0.0.1], [taktaktaktaktaktaktaktaktaktak@gmail.com], [lexicim])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

dnl AC_PATH_PROG(VALADOC, valadoc, valadoc)
dnl AC_SUBST(VALADOC)

dnl AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
dnl GETTEXT_PACKAGE=lexicim
dnl AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
dnl AC_SUBST(GETTEXT_PACKAGE)
dnl AM_GLIB_GNU_GETTEXT
dnl IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.14.0

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GLIB_REQUIRED glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED gee-1.0 >= 0.1.3)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

AC_CONFIG_FILES([Makefile
	Lexicim/Makefile])

AC_OUTPUT
